Support additional AMQP env vars and refactor.

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,6 +8,7 @@
 !pkg
 !Makefile
 !go.mod
+!config.json
 !examples/echo/echo-clients/Makefile
 !examples/echo/echo-clients/go.mod
 !examples/echo/echo-clients/rpcclient.go
